<resources>
    <string name="app_name">My Application</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_city">City</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_home">My Calendar</string>
    <string name="title_dashboard">Schedule Time</string>
    <string name="title_notifications">Schedule Events</string>
    <string name="title_user_notifications">Add Volunteer Time</string>
    <string name="textHome2">instructions.......</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="add_event">Add event</string>
    <string name="string_texthome2">instructions///</string>
    <string name="yes_vul_time">Possible Volunteer Time Added Successfully</string>
    <string name="invalid_time">One of the parameters is empty, failed to add volunteer time</string>
    <string name="invalid_time2">One of the parameters is empty, failed to add volunteer time</string>

</resources>